--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "react_todo_app",
+  "homepage": "https://khanatiullah8.github.io/react_redux_toolkit_todo_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -14,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
